Media querys integrados

--- a/index.html
+++ b/index.html
@@ -31,8 +31,14 @@
 </div>
     <hr>
 <!--SHOWCASE-->
+<div class="photoheadresponsive">
+<img src="img/hi-margaux-mainretocada copia.jpg"alt="photo head" class="fotohead">
+ </div>
 
     <header class="showcase">
+
+
+
       <div class="content">
 
         <h2>Enjoy your trip</h2>
